# vigra

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  Makefile  Makefile.in  README  README.md  README.txt  appveyor.yml  azure-pipelines.yml  configure  index.html  run_lint.sh  shorten_path.bat  tutorial_info.txt
config/: .cvsignore  COMPILER.mak  CPackConfig.cmake  CTestConfig.cmake.template  FindFFTW3.cmake  FindFFTW3F.cmake  FindHDF5.cmake  FindLEMON.cmake  FindOpenEXR.cmake  FindOpenMP.cmake  FindVIGRANUMPY_DEPENDENCIES - 2.x.cmake  FindVIGRANUMPY_DEPENDENCIES.cmake  GCC.mak  HandleOpenMPFlags.cmake  IRIXCC7.2.0.mak  IRIXCC7.2.1.mak  Makefile.include  Makefile.include.empty  Makefile.include.in  VIGRA_ADD_NUMPY_MODULE.cmake  VigraAddTest.cmake  VigraCMakeUtils.cmake  VigraConfig.cmake.in  VigraConfigBuild.cmake.in  VigraConfigCmath.cmake  VigraConfigVersion.cmake.in  VigraConfigureThreading.cmake  VigraDetectCppVersion.cmake  VigraDetectThreading.cmake  VigraFindPackage.cmake  VigraSetDefaults.cmake  VigranumpyConfig.cmake.in  WHERE_IS_OpenMP.cmake  acinclude.m4  checkHDF5usesCompression.c  checkHDF5version.c  checkTemplateDepth.cxx  check_std_isnan.cxx  check_std_thread.cxx  configVersion.hxx.in  (+19 more)
config/nuget/: vigra.nuspec  vigra.redist.nuspec  vigra.redist.targets  vigra.targets
docsrc/: CMakeLists.txt  Doxyfile.in  Makefile  credits_changelog.dxx  doxygen.css  examples.dxx  footer.dxx  footer.html  header.html  html.cpp.copy  image_processing.dxx  important_methods.dxx  index.dxx  index_fallback.html  installation.dxx  installation.html  makeFunctionIndex.py  makefooter.csh  parallel_processing.dxx  post-doxy-1.5.6.py  post.py  postprocess_doc.sed  postprocessing.py  tutorial.dxx  vigra-icon.xcf  vigra-wiki.html  vigra.css  vigra_1_8_2.css
docsrc/documents/: DataAccessors.ps  FunctorFactory.ps  GenericProg2D.ps
python/cpp/: CMakeLists.txt  tuples.hpp  vigranumpyconvolution.cxx  vigranumpyfourier.cxx  vigranumpykernel.cxx  vigranumpykernel.hxx  vigranumpymultianalysis.cxx  vigranumpymulticonvolution.cxx  vigranumpyrf.cxx
python/test/: CMakeLists.txt  set_paths.py  test_arraytypes.py  test_christoph.py  test_impex.py  test_nathan.py  test_stephan.py  vigranumpytest.cxx
src/examples/: .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile.in  aniso_tv.par  block.tif  boundarytensor.cxx  boundarytensor.vcproj  convert.cxx  convert.dsp  convert.vcproj  distance.cxx  edge.cxx  edge.dsp  edge.vcproj  firsttry.cxx  house.tif  invert.cxx  invert.dsp  invert.vcproj  invert_explicit.dsp  invert_explicitly-vc71.vcproj  invert_explicitly.cxx  invert_explicitly.dsp  invert_explicitly.vcproj  meshExporter.py  mkCylinder.py  multi_distance.cxx  nnlsq.cxx  numpy2vtk.py  palette.cxx  profile.cxx  profile.dsp  profile.vcproj  pyramid-vc71.vcproj  pyramid.cxx  pyramid.dsp  pyramid.vcproj  resize.cxx  (+29 more)
src/impex/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  auto_file.hxx  block_read.c  bmp.c  bmp.cxx  bmp.h  bmp.hxx  byteorder.cxx  byteorder.hxx  codecmanager.cxx  codecmanager.hxx  colorlist.h  colors.c  compression.cxx  cr_image.c  error.c  error.h  error.hxx  exr.cxx  exr.hxx  freeimage.c  fullpath.c  gif.c  gif.cxx  gif.h  gif.hxx  hdf5_rf_impex.cxx  hdf5impex.cxx  hdr.cxx  hdr.hxx  iccjpeg.c  iccjpeg.h  image.c  imageinfo.cxx  imagesize.c  impex-vc71.vcproj  impex.cxx  (+50 more)
test/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  Makefile.include  Makefile.include.in  checkUnitTests.py  test-vc71.sln  test.dsw  test.sln  testOrDelete.bat
test/adjacency_list_graph/: CMakeLists.txt  test.cxx
test/binary_forest/: CMakeLists.txt  test.cxx
test/blockwise-labeling/: label_multi_range.cpp  visit_border.cpp
test/blockwise_labeling/: CMakeLists.txt  label_multi_range_blockwise.cpp  test.cxx
test/blockwisealgorithms/: .test_watershed.cxx.swp  CMakeLists.txt  test_convolution.cxx  test_labeling.cxx  test_watershed.cxx  test_watersheds.cxx  utils.hxx
test/blockwiselabeling/: CMakeLists.txt  test.cxx
test/blockwisewatersheds/: CMakeLists.txt  test.cxx
test/chunked/: CMakeLists.txt  test_chunked_convolution.cxx  test_chunked_math.cxx  test_chunked_roi.cxx  test_chunked_view.cxx
test/chunkedconvolution/: CMakeLists.txt  test_chunked_convolution.cxx  utils.hxx
test/classifier/: CMakeLists.txt  speed_comparison.cxx  test.cxx  test_visitors.hxx
test/colorspaces/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  colorspaces-vc71.vcproj  colorspaces.vcproj  test.cxx
test/convexhull/: CMakeLists.txt  test.cxx
test/convolution/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  astronaut128nonlinear.xv  astronaut128recgrad.xv  astronaut128rgb.xv  astronaut128rgbsepgrad.xv  astronaut128sepgrad.xv  astronaut_gaussian_sharpening_orig.xv  astronaut_level-1.xv  astronaut_level-2.xv  astronaut_level1.xv  astronaut_level2.xv  astronaut_levellap0.xv  astronaut_levellap1.xv  astronaut_levellap2.xv  astronaut_simple_sharpening_orig.xv  astronauthessxx.xv  astronauthessxy.xv  astronauthessyy.xv  astronautrgbst.xv  astronautstxx.xv  astronautstxy.xv  astronautstyy.xv  convolution-vc71.vcproj  convolution.dsp  convolution.vcproj  coscot.xv  lenna128nonlinear.tif  lenna128nonlinear.xv  lenna128recgrad.xv  lenna128rgbsepgrad.xv  lenna128sepgrad.tif  lenna128sepgrad.xv  lenna_gaussian_sharpening_orig.xv  lenna_level-1.xv  lenna_level-2.xv  lenna_level1.xv  lenna_level2.xv  (+20 more)
test/coordinateiterator/: CMakeLists.txt  test.cxx
test/correlation/: CMakeLists.txt  test.cxx
test/counting_iterator/: CMakeLists.txt  test.cxx
test/delegates/: CMakeLists.txt  test.cxx
test/emd/: CMakeLists.txt  test.cxx
test/error/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  error-vc71.vcproj  error.dsp  error.vcproj  test.cxx
test/features/: CMakeLists.txt  test.cxx  wigner-matrix-reference.hxx
test/filter_iterator/: CMakeLists.txt  test.cxx
test/filters/: CMakeLists.txt  test.cxx
test/fourier/: .cvsignore  Makefile  (+11 more)
vigranumpy/: CMakeLists.txt  ruff.toml  setup.py.cmake2.in  setup.py.in
(+6332 files in other folders)
